<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Translate</string>
    <string name="app_sub_name" translatable="false">Language Translator</string>
    <string name="app_title" translatable="false">Translator</string>
    <string name="text_select_country">Select County</string>
    <string name="text_search">Search</string>
    <string name="text_all_country">All Country</string>
    <string name="text_no_country_found">Country Not Found…</string>
    <string name="select_app_language">Select App Language</string>
    <string name="system_default">System Default</string>
    <string name="all_language">All Languages</string>

    <string name="text_onboard_first_title">Speech And Translate</string>
    <string name="text_fir_onboard_first_sub_title">Spoken language converted into Text</string>
    <string name="text_sec_onboard_first_sub_title">and then will be Translated.</string>

    <string name="text_onboard_second_title">Translate Text To Speech</string>
    <string name="text_fir_onboard_sec_sub_title">Take text as an Input, Translate,</string>
    <string name="text_sec_onboard_sec_sub_title">And give Audible speech as an output</string>

    <string name="text_onboard_third_title">Share Your Translates Text</string>
    <string name="text_fir_onboard_third_sub_title">Share Your Translates Speech with</string>
    <string name="text_sec_onboard_third_sub_title">Your Friends Using Language Translator</string>

    <string name="text_next">Next</string>
    <string name="text_say_something">Say Something…</string>
    <string name="text_device_not_support">Your Device Does not Support Speech functionality</string>
    <string name="text_lets_start">Let\'s Start</string>
    <string name="text_translate_language">Translate Language</string>
    <string name="text_rate_app">Rate App</string>
    <string name="text_rating_and_review">Rating and Review</string>
    <string name="text_with_your_friends">with your friends</string>
    <string name="translated_text_hint">Translated text</string>
    <string name="unknown_error">Unknown error occurred.</string>
    <string name="source_text_hint">Enter text</string>
    <string name="text_phrases">Phrases</string>
    <string name="text_conversation">Conversation</string>
    <string name="text_setting">Settings</string>
    <string name="text_translate">Translate</string>
    <string name="text_phrase_book">Phrasebook</string>
    <string name="text_essentials">Essentials</string>
    <string name="app_languages">Languages</string>
    <string name="selected">Selected</string>
    <string name="text_greetings">Greetings</string>
    <string name="text_basic">Basic</string>
    <string name="text_copied">Text Copied</string>
    <string name="text_not_found">Text Not Found</string>
    <string name="text_select_the_country">Select the Country</string>
    <string name="text_please_download_language_first">Please download language first</string>
    <string name="text_downloading_start">Downloading Start</string>
    <string name="text_already_downloaded">Already Downloaded</string>
    <string name="text_download_successfully">Download Successfully</string>
    <string name="text_app_themes">App Themes</string>
    <string name="text_history">History</string>
    <string name="text_share_app">Share App</string>
    <string name="text_rate">Rate Us</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_start_conversation">Start your Conversation</string>
    <string name="text_tap_mic_button_to_start_conversation">Tap mic button to start conversation</string>
    <string name="text_translating">Translating…</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_no_history">No History Found</string>
    <string name="text_make_translation_history">Please Start Translation</string>
    <string name="text_no_favorite">No Favorite Translation Found</string>
    <string name="text_make_translation_favorite">Make Your Translation Favorite</string>
    <string name="text_exit_app">Exit App</string>
    <string name="text_are_you_sure_want_to_exit">Are you sure want to exit this app ?</string>
    <string name="text_no">No</string>
    <string name="text_yes">Yes</string>

</resources>
