<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".java.activity.StarterActivity">


    <LinearLayout
        android:id="@+id/layout_foreground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.theophrast.ui.widget.SquareImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="80dp"
            android:src="@drawable/fg_starter_screen" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="42sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/app_sub_name"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_foreground">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/high_margin"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:paddingVertical="2dp">

                <ImageView
                    android:id="@+id/img_translate"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="@dimen/high_margin"
                    android:src="@drawable/ic_start_translate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_translate"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/StarterSelectedTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_lets_start" />

                    <TextView
                        style="@style/StarterSelectedSubTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_translate_language" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/high_margin"
                    android:src="@drawable/ic_right_with_bg"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/high_margin"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/language_translator_toggle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin">

                <ImageView
                    android:id="@+id/img_rate"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_rate"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/StarterTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rate_app" />

                    <TextView
                        style="@style/StarterSubTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_rating_and_review" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/high_margin"
                    android:background="@drawable/ic_right_with_bg"
                    android:backgroundTint="@color/search_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/high_margin"
            app:cardBackgroundColor="@color/colorPrimaryLight"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintTop_toBottomOf="@+id/language_translator_toggle">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin">

                <ImageView
                    android:id="@+id/img_chat"
                    android:padding="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_share"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/img_chat"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        style="@style/StarterTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_share_app" />

                    <TextView
                        android:id="@+id/txt_sub_title"
                        style="@style/StarterSubTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_with_your_friends" />
                </LinearLayout>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="@dimen/high_margin"
                    android:background="@drawable/ic_right_with_bg"
                    android:backgroundTint="@color/search_placeholder"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>