<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_margin="@dimen/_10sdp"
                android:src="@drawable/ic_exit_app" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/mfont_medium"
                android:gravity="center"
                android:text="@string/text_exit_app"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/mfont"
                android:gravity="center"
                android:text="@string/text_are_you_sure_want_to_exit"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_14ssp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/_10sdp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/btnNo"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1.0">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/mfont_medium"
                        android:gravity="center"
                        android:text="@string/text_no"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/btnYes"
                    android:layout_width="0.0dip"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_button"
                        android:fontFamily="@font/mfont_medium"
                        android:gravity="center"
                        android:text="@string/text_yes"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_12ssp" />

                </RelativeLayout>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardViewAdsMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_3sdp"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp">

                <TextView
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_210sdp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/mfont_medium"
                    android:gravity="center"
                    android:id="@+id/txtAdsMain"
                    android:text="Ad is Loading..."
                    android:textColor="#73818C9F"
                    android:textSize="@dimen/_15ssp" />

                <FrameLayout
                    android:id="@+id/frameViewAdsMain"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_210sdp"
                    android:visibility="gone"
                    android:orientation="vertical"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>