<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".java.activity.SelectLanguageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/select_app_language"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp"
            android:maxLines="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/language_selected"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:scaleType="fitEnd"
            android:id="@+id/language_selected"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:src="@drawable/ic_checked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/SystemLanguageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:text="@string/system_default"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_default_language"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginVertical="@dimen/normal_margin"
        app:layout_constraintBottom_toTopOf="@+id/text_all_country"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/image_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_flag"
                android:layout_width="50dp"
                android:layout_height="35dp"
                android:scaleType="centerCrop"
                android:src="@drawable/in" />

        </com.google.android.material.card.MaterialCardView>


        <TextView
            android:text="Hello Bhai"
            android:id="@+id/txt_language_name"
            style="@style/SelectLanguageSubTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/image_card"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_selected"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="8dp"
            android:src="@drawable/ic_check_fill"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_all_country"
        style="@style/SystemLanguageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginVertical="@dimen/normal_margin"
        android:text="@string/all_language"
        app:layout_constraintBottom_toTopOf="@+id/language_rcv"
        app:layout_constraintTop_toBottomOf="@+id/layout_default_language" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/language_rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_all_country" />
</androidx.constraintlayout.widget.ConstraintLayout>