<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".languagetranslator.activity.CountryActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginHorizontal="@dimen/normal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/plus_jakarta_sans_bold"
            android:text="@string/text_select_country"
            android:textColor="@color/colorSecondaryDark"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_country_select"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="10dp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_checked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layout_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:background="@drawable/drawable_rounded_rectangle"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/text_country_select"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/plus_jakarta_sans_regular"
            android:hint="@string/text_search"
            android:maxLines="1"
            android:paddingVertical="@dimen/high_margin"
            android:textColor="@color/colorThirdDark"
            android:textColorHint="@color/search_placeholder"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/ima_mic"
            android:layout_width="20dp"
            android:layout_height="28dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/high_margin"
            android:padding="3dp"
            android:src="@drawable/ic_mic_black" />

    </FrameLayout>


    <TextView
        android:id="@+id/text_all_country"
        style="@style/SystemLanguageTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/normal_margin"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/text_all_country"
        app:layout_constraintTop_toBottomOf="@+id/layout_frame" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/loading"
        style="@style/CircularProgressIndicatorStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:indicatorDirectionCircular="clockwise"
        app:layout_constraintBottom_toTopOf="@+id/cardViewAds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_all_country" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/country_rcv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/normal_margin"
        android:overScrollMode="always"
        app:layout_constraintBottom_toTopOf="@+id/cardViewAds"
        app:layout_constraintTop_toBottomOf="@+id/text_all_country" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_rcv">

        <FrameLayout
            android:id="@+id/frameViewAds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" />

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>